# Geometry-Of-Acquisition

./: .gitignore  download_local_model.py  embed_data.py  fit_cumlink.py  import_data.py  main.py  pyproject.toml
data/: test_cefr_dataset.csv
data/CEFR-SP/: README.md
geometryofacquisition.egg-info/: PKG-INFO  SOURCES.txt
src/: vector.py
src/geometryofacquisition.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
