[project]
name = "geometryofacquisition"
version = "0.1.0"
description = "Investigating the geometry of L2 acquisition"
authors = [{name = "Laurits Lyngbaek", email = "laurits@cc.au.dk"}]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12.0"
dependencies = [
    "datasets>=4.1.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.1",
    "numpy>=2.3.3",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "transformers>=4.56.2",
    "ipython>=9.6.0",
    "huggingface-hub>=0.35.3",
    "kagglehub>=0.3.13",
]


[project.scripts]
main = "main:main"
